--- a/Cleaning Insurance Dataset.ipynb
+++ b/Cleaning Insurance Dataset.ipynb
@@ -273,8 +273,7 @@
    "source": [
     "➡️ How are we going to go about cleaning up the dataframe?\n",
     "\n",
-    "- we will identify the missing/corrupted/outliers values\n",
-    "- we will replace the missing/corrupted/outliers values\n",
+    "- we will identify/delete the missing/corrupted/outliers values\n",
     "- we will process the categorical columns\n",
     "- we will delete the columns we are not interested in\n",
     "- we will normalize the data because it's necessary for BP"
@@ -764,20 +763,6 @@
    "metadata": {},
    "source": [
     "➡️ In the original dataframe there are 1338 rows so we can deduce that there are 145 outliers."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Replace the missing/corrupted/outliers values"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "➡️ We don't need to replace any values because the df is clean."
    ]
   },
   {
